Constraining details summary to fix flex items broken layouts

--- a/style/details-summary.css
+++ b/style/details-summary.css
@@ -29,6 +29,9 @@ details {
 
 @scope (details) {
     :scope {
+
+        width: 100%;
+
         & > summary {
             cursor: pointer;
             display: flex;
